# VynFi-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-03-05-python-sdk-design.md
src/vynfi/: __init__.py  _client.py  _exceptions.py  _types.py
src/vynfi/resources/: __init__.py  api_keys.py  billing.py  catalog.py  jobs.py  quality.py  usage.py  webhooks.py
tests/: test_client.py  test_resources.py
