[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vynfi"
version = "0.1.0"
description = "Python SDK for the VynFi synthetic financial data API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "VynFi", email = "hello@vynfi.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
    "eval_type_backport>=0.1.0; python_version < '3.10'",
]

[project.urls]
Homepage = "https://vynfi.com"
Documentation = "https://docs.vynfi.com"
Repository = "https://github.com/VynFi/VynFi-python"
Issues = "https://github.com/VynFi/VynFi-python/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# These files define a list() method which shadows the builtin;
# mypy needs typing.List to avoid interpreting list[str] as the method.
"src/vynfi/resources/api_keys.py" = ["UP006", "UP035", "UP045"]
"src/vynfi/resources/webhooks.py" = ["UP006", "UP035", "UP045"]

[tool.mypy]
python_version = "3.9"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.0",
]
